--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,7 @@
 {
+  "singleQuote": true,
   "semi": true,
-  "trailingComma": "all",
-  "printWidth": 80,
-  "tabWidth": 2,
-  "arrowParens": "avoid",
-  "bracketSameLine": true,
-  "bracketSpacing": false,
-  "endOfLine": "auto"
+  "printWidth": 100,
+  "useTabs": false,
+  "tabWidth": 2
 }
