--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "start": "webpack-dev-server --mode development --open",
     "watch": "webpack --watch --progress --config webpack.config.js",
     "build": "webpack --progress --config webpack.prod.js",
-    "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "lint": "eslint .",
+    "lintFixAll": "eslint 'src/**/*.{ts,tsx,js,jsx}' --fix",
+    "prettierFixAll": "prettier --write 'src/**/*.{ts,tsx,js,jsx,json,css,scss,md}'",
+    "fix:lintPrettier": "npm run prettierFixAll && npm run lintFixAll",
+    "tsc": "tsc --noEmit",
+    "prepare": "husky",
+    "lint-staged": "lint-staged",
+    "postinstall": "patch-package"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": [
+      "npm run lint",
+      "npm run fix:lintPrettier",
+      "git add ."
+    ]
   },
   "dependencies": {
     "@react-spring/core": "^9.7.5",
@@ -36,27 +48,35 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "@eslint/js": "^9.26.0",
     "@types/chrome": "^0.0.206",
     "@types/crypto-js": "^4.2.2",
     "@types/node-forge": "^1.3.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.20",
     "postcss-loader": "^4.3.0",
-    "prettier": "^3.3.3",
+    "postinstall-postinstall": "^2.1.0",
+    "prettier": "^3.5.3",
     "style-loader": "^2.0.0",
     "tailwindcss": "^3.2.4",
     "ts-loader": "^8.4.0",
